--- a/AndroidStudio/SpeechToText/app/build.gradle
+++ b/AndroidStudio/SpeechToText/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     api 'androidx.appcompat:appcompat:1.4.2'
     api 'com.google.android.material:material:1.6.1'
-    compile files('libs/classes.jar')
+//    compile files('libs/classes.jar')
 }
 
 //task to delete the old jar
